--- a/src/base/index.html
+++ b/src/base/index.html
@@ -7,14 +7,22 @@
         <script src="../../node_modules/electron-tabs/dist/electron-tabs.js"></script>
         <script src="./scripts/electron-tabs.js"></script>
         <script src="./scripts/instance.js"></script>
+        <script src="./scripts/theme.js"></script>
         <script src="./scripts/toggles.js"></script>
     </head> 
-    <body onload="InstanceGet()">
+    <body onload="ThemeCheck(); InstanceGet()">
         <drag></drag>
         <sl-include src="./components/titlebar.html"></sl-include>
         <sl-include src="./components/splash.html"></sl-include>
         <sl-include src="./components/tabs.html"></sl-include>
         <sl-include src="./components/settings.html"></sl-include>
+
+        <div class="no-tabs-exist" style="display: none;">
+            <img src="./assets/penpot-logo/logo-white.png"/>
+            <h2>No tabs are opened</h2>
+            <p>Add a new tab to start making awesome things.</p>
+            <button onclick='document.querySelector("body > sl-include:nth-child(4) > tab-group").shadowRoot.querySelector("div > nav > div.buttons > button").click(); ATWC()'>Create a tab</button>
+        </div>
 
         <!-- Alerts-->
         <sl-include class="alert-modal" src="./components/alerts/no-instance.html"></sl-include>
